# SOMA

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  ContributorAgreement  INSTALL  LICENSE.NOTES  README  server_smoke_test.sh
CMake/: CMakeLists.txt
c_src/: .gitignore  CMakeLists.txt  Makefile  ana.c  ana.h  ana_info.c  ana_info.h  ana_malloc.c  ana_malloc.h  ana_original.c  ana_original.h  ana_server.c  ana_server.h  ana_test.c  autotuner.c  autotuner.h  bond.c  bond.h  cmdline.c  cmdline.h  constantJ.c  convert.c  donnan.c  donnan.h  electric_field.c  electric_field.h  electric_field_helper.h  err_handling.h  failed_files  force_indention.sh  generate_cmdline.sh  generate_positions.c  generate_positions.h  helper_electro.c  helper_electro.h  independent_sets.c  independent_sets.h  init.c  init.h  io.c  (+65 more)
c_src/crosslink/: CMakeLists.txt  crosslink_lib.c  crosslink_lib.h  perkolation_lib.c  perkolation_lib.h  readIn.c  readIn_lib.c  readIn_lib.h  separateMolecule_lib.c  separateMolecule_lib.h
c_src/instantaneous_shear_plugin/: CMakeLists.txt  README  shear.c  shear_lib.c  shear_lib.h
c_src/mpi_unity/: CMakeLists.txt  ana_test.c  err_handling.h  extract_test_cases.py  mesh_test.c  run_unit_tests.h  unit_test_util.h  unity.c  unity.h  unity_capture.c  unity_capture.h  unity_capture_test.c  unity_fixture.h  unity_mpi_addon.c
c_src/server_prototype/: Makefile  clientserver.c  compile_and_test.sh  serv_util.c  serv_util.h  server.c  server.h  unittests.cpp
documentation/: CMakeLists.txt  Doxyfile.in  design.dox  features.dox  hdf5.dox  install.dox  mainpage.dox  plugin.dox  prng.dox  theory.dox  workflow.dox  xml.dox
example/: complex.xml  coord.xml  monoconversion.xml  scmf2.xml
python_src/: AnaGen.py.in  CMakeLists.txt  ConfGen.py.in  auto_chunk.py.in  create_pov.py.in  create_xdmf.py.in  extract_test_cases.py  handleAnaH5.py.in  soma_type.py.in
setups/: CMakeLists.txt  GAUG_intern.sh  README  amd.sh  hlrn.sh  jureca.sh  jureca_cpu.sh  jureca_python.sh  jusuf.sh  jusuf_cpu.sh  juwels.sh  juwels_booster.sh  juwels_cpu.sh  midway.sh  midway_cpu.sh  strand.sh  titan.sh  titan_python.sh
singularity/: soma_cpu.def  soma_gpu.def
testing/: AnaGen.py.in  AnaGen.sh.in  CMakeLists.txt  GPUexact.sh.in  LoadBalance.sh.in  RestartDomain.sh.in  RestartExact.sh.in  Tag.sh.in  TestArea51.sh.in  area51.xml  async.py.in  async.py.in.~1~  async.xml  compareDatH5.py.in  compare_mixed_bead_data.py.in  conversion.xml  conversion_test.py.in  convert.sh.in  diblock.xml  diverse_polytype.xml  domain.xml  domain_monoconv.xml  domain_statistics.py.in  external_field.py.in  external_field.xml  homo.xml  mic.py.in  mic.xml  mic_time.xml  mobility.sh.in  mobility_high_concentration.xml  mobility_high_concentration_eq.xml  mobility_low_concentration.xml  mobility_low_concentration_eq.xml  monoconversion.xml  monoconversion_dd.xml  monoconversion_test.py.in  partial_conversion.xml  partial_conversion_dd.xml  partial_conversion_test.py.in  (+14 more)
